--- a/.github/workflows/prevent-changes-to-locked-migrations.yml
+++ b/.github/workflows/prevent-changes-to-locked-migrations.yml
@@ -1,7 +1,7 @@
 name: Prevents changes to locked migrations.
 
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - main
       - release/*
