--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -661,13 +661,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              required:
-                - accountId
-              properties:
-                accountId:
-                  type: integer
-                  description: Internal database ID of the Riot account to link
+              $ref: '#/components/schemas/AccountLinkRequestDto'
       responses:
         '200':
           description: Riot account linked to player
@@ -992,6 +986,14 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/RiotAccountDto'
+
+    AccountLinkRequestDto:
+      type: object
+      required:
+        - accountId
+      properties:
+        accountId:
+          type: integer
 
     PatchPlayerDto:
       type: object
