--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-LBLCS_JDBC_URL=jdbc:postgresql://db:5432/postgres?user=postgres&prepareThreshold=0
-LBLCS_JDBC_PW=admin
-RIOT_API_TOKEN=
-RIOT_USE_STUBS=True
+database.url=JDBC_PLACEHOLDER
+database.password=PASSWORD_PLACEHOLDER
+riot.key=RIOT_API_TOKEN_PLACEHOLDER
+riot.useStubs=BOOLEAN_PLACEHOLDER
