Unit and Integration tests run in parallel.

--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -11,7 +11,7 @@ on:
       - 'dev/**'
 
 jobs:
-  test:
+  unit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -21,4 +21,16 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Test project
-        run: ./gradlew test itest
+        run: ./gradlew test
+
+  integration:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      # Utilizes Gradle cache
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Test project
+        run: ./gradlew itest
